--- a/charts/kubeadm/templates/credential-provider.yaml
+++ b/charts/kubeadm/templates/credential-provider.yaml
@@ -1,4 +1,4 @@
-apiVersion: kubelet.config.k8s.io/v1alpha1
+apiVersion: kubelet.config.k8s.io/v1beta1
 kind: CredentialProviderConfig
 providers:
   - name: amazon-ecr-credential-helper
