--- a/charts/kubezero-network/templates/multus/daemonset.yaml
+++ b/charts/kubezero-network/templates/multus/daemonset.yaml
@@ -24,6 +24,7 @@ spec:
       - operator: Exists
         effect: NoExecute
       serviceAccountName: multus
+      priorityClassName: system-node-critical
       containers:
       - name: kube-multus
         image: ghcr.io/k8snetworkplumbingwg/multus-cni:{{ .Values.multus.tag }}
