--- a/charts/kubezero-storage/charts/gemini/templates/deployment.yaml
+++ b/charts/kubezero-storage/charts/gemini/templates/deployment.yaml
@@ -24,6 +24,8 @@ spec:
       tolerations:
       - effect: NoSchedule
         key: node-role.kubernetes.io/master
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/control-plane
       containers:
       - command:
         - gemini
