--- a/charts/kubezero-auth/crds/keycloak-realmimports.yaml
+++ b/charts/kubezero-auth/crds/keycloak-realmimports.yaml
@@ -938,6 +938,8 @@ spec:
                           type: array
                       type: object
                     type: array
+                  otpPolicyCodeReusable:
+                    type: boolean
                   clientProfiles:
                     type: object
                     x-kubernetes-preserve-unknown-fields: true
