--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -69,7 +69,7 @@ jenkins:
   enabled: false
 
   controller:
-    tag: 2.370-alpine-jdk17
+    tag: alpine-jdk17
     #tagLabel: alpine
     disableRememberMe: true
     prometheus:
@@ -114,16 +114,16 @@ jenkins:
                       numToKeepStr: "10"
 
     installPlugins:
-      - kubernetes:3724.v0920c1e0ec69
+      - kubernetes:3734.v562b_b_a_627ea_c
       - workflow-aggregator:581.v0c46fa_697ffd
-      - git:4.12.1
-      - configuration-as-code:1512.vb_79d418d5fc8
+      - git:4.13.0
+      - configuration-as-code:1569.vb_72405b_80249
       - antisamy-markup-formatter:2.7
       - prometheus:2.0.11
       - htmlpublisher:1.31
       - build-discarder:139.v05696a_7fe240
-      - dark-theme:245.vb_a_2b_b_010ea_96
-      - kubernetes-credentials-provider:1.199.v4a_1d1f5d074f
+      - dark-theme:262.v0202a_4c8fb_6a
+      - kubernetes-credentials-provider:1.206.v7ce2cf7b_0c8b
 
   serviceAccountAgent:
     create: true
