--- a/charts/kubezero-auth/templates/keycloak/istio-authorization-policy.yaml
+++ b/charts/kubezero-auth/templates/keycloak/istio-authorization-policy.yaml
@@ -15,7 +15,7 @@ spec:
   - to:
     - operation:
         hosts: ["{{ .Values.keycloak.istio.url }}"]
-        paths: ["/metrics*"]
+        paths: ["/auth/realms/master/metrics"]
     when:
     - key: connection.sni
       values:
