--- a/charts/uptime-kuma/Chart.yaml
+++ b/charts/uptime-kuma/Chart.yaml
@@ -1,18 +1,19 @@
 apiVersion: v2
 name: uptime-kuma
-description: Chart for deploying uptime-kuma
+description: Chart for deploying uptime-kuma on KubeZero
 type: application
-version: 0.1.10
-appVersion: 1.9.1
+version: 0.2.0
+appVersion: 1.18.5
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - uptime-kuma
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
-    version: ">= 0.1.4"
+    version: ">= 0.1.5"
     repository: https://cdn.zero-downtime.net/charts/
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.20.0"
