feat: version bump for RabbitMQ, within the MQ module, secret handling changes

--- a/charts/kubezero-mq/values.yaml
+++ b/charts/kubezero-mq/values.yaml
@@ -38,8 +38,8 @@ rabbitmq:
     gateway: istio-ingress/private-ingressgateway
 
   auth:
-    password: "supersecret"
-    erlangCookie: "randomlongerlangcookie"
+    existingPasswordSecret: rabbitmq
+    existingErlangSecret: rabbitmq
     tls:
       enabled: false
       failIfNoPeerCert: false
