feat: first try of 1.24 upgrade flow

--- a/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
+++ b/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: kube-system
 spec:
   schedule: "0 * * * *"
+  concurrencyPolicy: "Replace"
   jobTemplate:
     spec:
       backoffLimit: 1
