feat: version bump kubezero-storage drivers

--- a/charts/kubezero-storage/values.yaml
+++ b/charts/kubezero-storage/values.yaml
@@ -55,6 +55,9 @@ gemini:
   enabled: false
   # verbosity: 1
 
+  #image:
+  #  tag: build_500
+
   resources:
     requests:
       memory: 32Mi
@@ -92,6 +95,20 @@ aws-ebs-csi-driver:
       #  value: "/var/run/secrets/sts.amazonaws.com/serviceaccount/token"
       #- name: AWS_STS_REGIONAL_ENDPOINTS
       #  value: regional
+
+    volumeMounts:
+      - name: aws-token
+        mountPath: "/var/run/secrets/sts.amazonaws.com/serviceaccount/"
+        readOnly: true
+    volumes:
+      - name: aws-token
+        projected:
+          sources:
+          - serviceAccountToken:
+              path: token
+              expirationSeconds: 86400
+              audience: "sts.amazonaws.com"
+
     resources:
       requests:
         cpu: 10m
