--- a/charts/kubezero-argocd/Chart.yaml
+++ b/charts/kubezero-argocd/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 description: KubeZero ArgoCD Helm chart to install ArgoCD itself and the KubeZero ArgoCD Application
 name: kubezero-argocd
-version: 0.10.2
+version: 0.11.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -16,6 +16,9 @@ dependencies:
     version: ">= 0.1.5"
     repository: https://cdn.zero-downtime.net/charts/
   - name: argo-cd
-    version: 4.10.9
+    version: 5.13.8
+    repository: https://argoproj.github.io/argo-helm
+  - name: argocd-apps
+    version: 0.0.3
     repository: https://argoproj.github.io/argo-helm
 kubeVersion: ">= 1.20.0"
