--- a/charts/kubezero-argocd/templates/istio-authorization-policy.yaml
+++ b/charts/kubezero-argocd/templates/istio-authorization-policy.yaml
@@ -19,7 +19,7 @@ spec:
         {{- toYaml .Values.istio.ipBlocks | nindent 8 }}
     to:
     - operation:
-        hosts: [{{ index .Values "argo-cd" "server" "config" "url" | quote }}]
+        hosts: [{{ index .Values "argo-cd" "configs" "cm" "url" | quote }}]
     when:
     - key: connection.sni
       values:
