--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -17,7 +17,7 @@ gitea:
   enabled: false
 
   image:
-    tag: 1.17.1
+    tag: 1.17.3
     rootless: true
 
   securityContext:
@@ -116,9 +116,9 @@ jenkins:
     installPlugins:
       - kubernetes:3734.v562b_b_a_627ea_c
       - workflow-aggregator:581.v0c46fa_697ffd
-      - git:4.13.0
+      - git:4.14.1
       - configuration-as-code:1569.vb_72405b_80249
-      - antisamy-markup-formatter:2.7
+      - antisamy-markup-formatter:155.v795fb_8702324
       - prometheus:2.0.11
       - htmlpublisher:1.31
       - build-discarder:139.v05696a_7fe240
@@ -132,7 +132,7 @@ jenkins:
   # Preconfigure agents to use zdt podman requires fuse/overlayfs
   agent:
     image: public.ecr.aws/zero-downtime/jenkins-podman
-    tag: v0.4.0
+    tag: v0.4.1
     resources:
       requests:
         cpu: "512m"
@@ -215,9 +215,10 @@ jenkins:
 
 trivy:
   enabled: false
+  image:
+    tag: 0.34.0
   persistence:
     enabled: true
     size: 1Gi
   rbac:
     create: false
-    pspEnabled: false
