--- a/charts/kubezero-mq/values.yaml
+++ b/charts/kubezero-mq/values.yaml
@@ -23,6 +23,26 @@ nats:
     # url: "mq.example.com"
     gateway: istio-ingress/private-ingressgateway
 
+# rabbitmq cluster operator
+rabbitmq-cluster-operator:
+  enabled: false
+  rabbitmqImage:
+    tag: 3.11.4-debian-11-r0
+
+  useCertManager: true
+
+  clusterOperator:
+    metrics:
+      enabled: false
+      serviceMonitor:
+        enabled: true
+
+  msgTopologyOperator:
+    metrics:
+      enabled: false
+      serviceMonitor:
+        enabled: true
+
 # rabbitmq
 rabbitmq:
   enabled: false
@@ -36,6 +56,7 @@ rabbitmq:
   istio:
     enabled: false
     gateway: istio-ingress/private-ingressgateway
+    mqtts: false
 
   auth:
     existingPasswordSecret: rabbitmq
@@ -47,7 +68,8 @@ rabbitmq:
       existingSecretFullChain: true
   
   clustering:
-    forceBoot: true
+    enabled: false
+    forceBoot: false
   
   resources:
     requests:
@@ -56,6 +78,9 @@ rabbitmq:
   
   replicaCount: 1
   
+  persistence:
+    size: 2Gi
+
   podAntiAffinityPreset: ""
   topologySpreadConstraints: |-
     - maxSkew: 1
@@ -70,9 +95,9 @@ rabbitmq:
         matchLabels: {{- include "common.labels.matchLabels" . | nindent 6 }}
  
   pdb:
-    create: true
+    create: false
   
   metrics:
     enabled: false
     serviceMonitor:
-      enabled: false
+      enabled: true
