--- a/charts/kubezero/templates/istio-private-ingress.yaml
+++ b/charts/kubezero/templates/istio-private-ingress.yaml
@@ -2,9 +2,6 @@
 
 gateway:
   name: istio-private-ingressgateway
-  labels:
-    app: istio-private-ingressgateway
-    istio: private-ingressgateway
 
   {{- with index .Values "istio-private-ingress" "gateway" "replicaCount" }}
   replicaCount: {{ . }}
@@ -19,16 +16,23 @@ gateway:
         - matchExpressions:
           - key: node.kubernetes.io/ingress.private
             operator: Exists
-    podAntiAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchExpressions:
-          - key: app
-            operator: In
-            values:
-            - istio-private-ingressgateway
-        topologyKey: "kubernetes.io/hostname"
   {{- end }}
+
+  topologySpreadConstraints:
+    - maxSkew: 1
+      topologyKey: topology.kubernetes.io/zone
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app: istio-private-ingressgateway
+          istio: private-ingressgateway
+    - maxSkew: 1
+      topologyKey: kubernetes.io/hostname
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app: istio-private-ingressgateway
+          istio: private-ingressgateway
 
   service:
     ports:
