feat: make snapshotController optional

--- a/charts/kubezero-storage/templates/snapshot-controller/rbac.yaml
+++ b/charts/kubezero-storage/templates/snapshot-controller/rbac.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.snapshotController.enabled }}
 # RBAC file for the snapshot controller.
 #
 # The snapshot controller implements the control loop for CSI snapshot functionality.
@@ -83,4 +84,4 @@ roleRef:
   kind: Role
   name: snapshot-controller-leaderelection
   apiGroup: rbac.authorization.k8s.io
-
+{{- end }}
