--- a/charts/kubezero-storage/crds/volumesnapshotclasses.yaml
+++ b/charts/kubezero-storage/crds/volumesnapshotclasses.yaml
@@ -1,4 +1,4 @@
----
+{{- if .Values.snapshotController.enabled }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -108,5 +108,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
-
+{{- end }}
