--- a/charts/kubezero-storage/crds/volumesnapshotcontents.yaml
+++ b/charts/kubezero-storage/crds/volumesnapshotcontents.yaml
@@ -1,4 +1,4 @@
----
+{{- if .Values.snapshotController.enabled }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -289,3 +289,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end }}
