--- a/charts/kubezero-storage/templates/snapshot-controller/controller.yaml
+++ b/charts/kubezero-storage/templates/snapshot-controller/controller.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.snapshotController.enabled }}
 kind: StatefulSet
 apiVersion: apps/v1
 metadata:
@@ -46,3 +47,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
