fix: shorten kubezero-lib names, tweaks

--- a/charts/kubezero-addons/Chart.yaml
+++ b/charts/kubezero-addons/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-addons
 description: KubeZero umbrella chart for various optional cluster addons
 type: application
-version: 0.7.1
+version: 0.7.2
 appVersion: v1.24
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
@@ -12,13 +12,15 @@ keywords:
   - neuron-device-plugin
   - nvidia-device-plugin
   - aws-node-termination-handler
+  - cluster-autoscaler
+  - sealed-secrets
   - external-dns
 maintainers:
   - name: Stefan Reimer
     email: stefan@zero-downtime.net
 dependencies:
   - name: aws-node-termination-handler
-    version: 0.20.0
+    version: 0.20.1
     # repository: https://aws.github.io/eks-charts
     condition: aws-node-termination-handler.enabled
   - name: external-dns
@@ -34,4 +36,8 @@ dependencies:
     # https://github.com/NVIDIA/k8s-device-plugin
     repository: https://nvidia.github.io/k8s-device-plugin
     condition: nvidia-device-plugin.enabled
+  - name: sealed-secrets
+    version: 2.7.1
+    repository: https://bitnami-labs.github.io/sealed-secrets
+    condition: sealed-secrets.enabled
 kubeVersion: ">= 1.24.0"
