--- a/charts/kubezero-addons/values.yaml
+++ b/charts/kubezero-addons/values.yaml
@@ -24,6 +24,34 @@ forseti:
     # -- "arn:aws:iam::${AWS::AccountId}:role/${AWS::Region}.${ClusterName}.kubezeroForseti"
     iamRoleArn: ""
 
+sealed-secrets:
+  enabled: false
+
+  # ensure kubeseal default values match
+  fullnameOverride: sealed-secrets-controller
+
+  # Disable auto keyrotation for now
+  keyrenewperiod: 0
+
+  resources:
+    requests:
+      cpu: 10m
+      memory: 24Mi
+    limits:
+      memory: 128Mi
+
+  metrics:
+    serviceMonitor:
+      enabled: false
+
+  nodeSelector:
+    node-role.kubernetes.io/control-plane: ""
+  tolerations:
+  - key: node-role.kubernetes.io/master
+    effect: NoSchedule
+  - key: node-role.kubernetes.io/control-plane
+    effect: NoSchedule
+
 aws-node-termination-handler:
   enabled: false
 
